--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.2.1",
     "daisyui": "^2.15.0",
     "firebase": "^9.8.1",
+    "i": "^0.3.7",
+    "lottie-react": "^2.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.2",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
