--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.1.3",
     "daisyui": "^2.15.0",
     "firebase": "^9.8.1",
     "i": "^0.3.7",
+    "install": "^0.13.0",
     "lottie-react": "^2.2.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.2",
     "react-lottie": "^1.2.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-visibility-sensor": "^5.1.1",
+    "typewriter-effect": "^2.18.2",
+    "uninstall": "^0.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
