--- a/package.json
+++ b/package.json
@@ -3,12 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.8.1",
+    "@stripe/stripe-js": "^1.31.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "daisyui": "^2.15.0",
+    "firebase": "^9.8.1",
+    "i": "^0.3.7",
+    "install": "^0.13.0",
+    "lottie-react": "^2.2.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.31.2",
+    "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3",
+    "react-query": "^3.39.0",
+    "react-rating": "^2.0.5",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.1",
+    "react-visibility-sensor": "^5.1.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.17",
+    "typewriter-effect": "^2.18.2",
+    "uninstall": "^0.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -34,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.24"
   }
 }
