--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@stripe/react-stripe-js": "^1.8.1",
-    "@stripe/stripe-js": "^1.30.0",
+    "@stripe/stripe-js": "^1.31.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -25,6 +25,7 @@
     "react-lottie": "^1.2.3",
     "react-query": "^3.39.0",
     "react-rating": "^2.0.5",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
