--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
+    "react-tsparticles": "^2.0.6",
     "react-visibility-sensor": "^5.1.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.17",
+    "tsparticles": "^2.0.6",
     "typewriter-effect": "^2.18.2",
     "uninstall": "^0.0.0",
     "web-vitals": "^2.1.0"
