--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.1",
     "react-tsparticles": "^2.0.6",
     "react-visibility-sensor": "^5.1.1",
+    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.17",
     "tsparticles": "^2.0.6",
